syntax = "proto3";

message RetInfo {
    int32 ret_code = 1;
    string ret_msg = 2;
}

message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginResp {
    RetInfo ret_info = 1;
}